--- a/frontend/src/app/shared/components/menu/menu.component.html
+++ b/frontend/src/app/shared/components/menu/menu.component.html
@@ -10,7 +10,7 @@
                         <i class="fa fa-plus" aria-hidden="true"></i> &nbsp; Create </a></li>
         <li *ngIf="user"><a><i aria-hidden="true"></i>
                         &nbsp;Points: {{user.points}}</a></li>
-        <li *ngIf="user && user.role === 'Admin'"><a [routerLink]="['/admin']">
+        <li *ngIf="user && user.role === 'ADMIN'"><a [routerLink]="['/admin']">
                         &nbsp;Adminpanel</a></li>
         <li *ngIf="user"><a [routerLink]="['/profile/', user.id]"><i class="fa fa-user" aria-hidden="true"></i>
                         &nbsp;Profile</a></li>
